# bibnumber

bibnumber/: CMakeLists.txt  batch.cpp  pipeline.cpp  pipeline.h  textdetection.cpp  textrecognition.cpp
